cabal-version: 3.8
name: tongues
version: 0.1.0.0

common commons
  build-depends:
    , base
    , data-fix
    , fancy
    , mtl
    , pretty-simple
    , recursion-schemes
    , text

  default-language: GHC2021
  default-extensions:
    BlockArguments
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    TypeFamilies
    UnicodeSyntax
    ViewPatterns

  ghc-options: -Wall -Wextra -Wno-star-is-type -Wno-missing-signatures

library
  import: commons
  hs-source-dirs: library
  exposed-modules: Fingers

test-suite checks
  import: commons
  hs-source-dirs: test-suites/checks
  main-is: Main.hs
  build-depends: generic-random, quickcheck-instances, tongues, transformers
